--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="app.js"></script>
 </head>
 <body>
-    
+    <form>
+        <input type="radio" name="user-choices" value="Rock">Rock<br>
+        <input type="radio" name="user-choices" value="Paper">Paper<br>
+        <input type="radio" name="user-choices" value="Scissors">Scissors<br>
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
